manifests-openshift/deploy-acmeair-authservice-java.yaml
###### Main Service ######
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair-authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmeair-auth-deployment
  template:
    metadata:
      labels:
        name: acmeair-auth-deployment
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9080"
    spec:
      containers:
      - name: acmeair-authservice-java
        image: quay.io/mmondics/acmeair-authservice-java-s390x:v1.0.0
        ports:
          - containerPort: 9080
          - containerPort: 9443
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 120
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-auth-service
spec:
  ports:
    - port: 9080
  selector:
    name: acmeair-auth-deployment
