manifests-openshift/deploy-acmeair-authservice-secu.yaml
###### Auth Service ######
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair-authservice
  labels:
    app.kubernetes.io/part-of: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmeair-auth-deployment
  template:
    metadata:
      labels:
        name: acmeair-auth-deployment
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9080"
    spec:
      containers:
      - name: acmeair-authservice-java
        image: quay.io/abdouibm/acme-authservice-sec:latest
        ports:
          - containerPort: 9080
          - containerPort: 9443
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 400m
          requests:
            cpu: 100m
        readinessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 120
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-auth-service
  labels:
    app.kubernetes.io/part-of: auth-service
spec:
  ports:
    - port: 9080
  selector:
    name: acmeair-auth-deployment
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-secure-auth-service
spec:
  ports:
    - name: 9443-tcp
      protocol: TCP
      port: 9443
      targetPort: 9443
  selector:
    name: acmeair-auth-deployment
