manifests-openshift/acmeair-authservice-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-auth-route
  labels:
    app.kubernetes.io/part-of: auth-service
spec:
  host: _HOST_
  path: /auth
  to:
    kind: Service
    name: acmeair-auth-service
  port:
    targetPort: 9080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
